--- a/frontend/template.css
+++ b/frontend/template.css
@@ -233,3 +233,37 @@ blockquote {
   stroke: var(--foam);
   stroke-width: 2;
 }
+
+@media (max-width: 750px) {
+  body {
+    font-size: 0.9rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  h5 {
+    font-size: 1rem;
+  }
+
+  .container {
+    padding-inline: 1rem;
+  }
+
+  .search-input {
+    width: 150px;
+  }
+}
