--- a/frontend/template.css
+++ b/frontend/template.css
@@ -42,13 +42,12 @@ body {
 }
 
 /* Headers: */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 2rem;
+:is(h1, h2, h3, h4, h5, h6) {
+  margin-top: 1rem;
+}
+
+:is(h1, h2, h3, h4, h5, h6) + :is(h1, h2, h3, h4, h5, h6) {
+    margin-top: 0;
 }
 
 h1:first-of-type {
