--- a/frontend/template.css
+++ b/frontend/template.css
@@ -46,8 +46,8 @@ body {
   margin-top: 1rem;
 }
 
-:is(h1, h2, h3, h4, h5, h6) + :is(h1, h2, h3, h4, h5, h6) {
-    margin-top: 0;
+:is(h1, h2, h3, h4, h5, h6)+ :is(h1, h2, h3, h4, h5, h6) {
+  margin-top: 0;
 }
 
 h1:first-of-type {
@@ -151,7 +151,7 @@ blockquote {
   border-left: .25em solid var(--muted);
 }
 
-img {
+img:not(.emoji) {
   max-width: 100%;
   height: auto;
   display: block;
