feat(favicon): add icon to template page;

--- a/assets/templates/template.html
+++ b/assets/templates/template.html
@@ -5,6 +5,7 @@
   <title>{{title}}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.svg">
   <!-- Normal CSS -->
   <link rel="stylesheet" href="/assets/templates/template.css" />
   <!-- Load Twitter Emojis: -->
