--- a/assets/templates/template.css
+++ b/assets/templates/template.css
@@ -202,6 +202,7 @@ img:not(.emoji) {
 }
 
 .search-container {
+  border: none;
   display: inline-flex;
   align-items: center;
   background-color: var(--overlay);
@@ -222,7 +223,6 @@ img:not(.emoji) {
   width: 200px;
   padding: 0.5rem;
   font-size: 1rem;
-  height: 100%;
 }
 
 .search-input::placeholder {
