--- a/assets/templates/template.css
+++ b/assets/templates/template.css
@@ -46,7 +46,7 @@ body {
   margin-top: 1rem;
 }
 
-:is(h1, h2, h3, h4, h5, h6)+ :is(h1, h2, h3, h4, h5, h6) {
+:is(h1, h2, h3, h4) + :is(h1, h2, h3, h4) {
   margin-top: 0;
 }
 
@@ -55,7 +55,6 @@ h1:first-of-type {
 }
 
 h1 {
-  text-decoration: none;
   color: var(--iris);
   font-size: 3rem;
 }
@@ -77,7 +76,7 @@ h4 {
 
 h5 {
   color: var(--pine);
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 /* Code: */
@@ -283,7 +282,7 @@ img:not(.emoji) {
 
 #overlay {
   backdrop-filter: blur(5px);
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
@@ -291,13 +290,13 @@ img:not(.emoji) {
 }
 
 #overlay-menu {
-  margin-top: 13vh;
+  margin-top: 10vh;
   margin-inline: auto;
-  max-width: 700px;
-  height: 70vh;
-  opacity: 0.97;
+  max-width: 800px;
+  height: 80vh;
+  opacity: 0.96;
   background-color: var(--overlay);
-  border-radius: 10px;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
 }
