--- a/assets/templates/template.html
+++ b/assets/templates/template.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="overlay">
+  <div id="overlay" style="display: none;">
     <div id="overlay-menu">
       <div id="overlay-search-container">
         <input id="overlay-search-input" type="text" placeholder="Search by content, title, and url...">
