feat(pages): add post on lets encrypt acme and `Rocket`;

--- a/pages/templates/template.css
+++ b/pages/templates/template.css
@@ -291,6 +291,7 @@ img:not(.emoji) {
   .top-bar {
     flex-direction: column;
     align-items: stretch;
+    padding: 0;
   }
 
   .search-container {
