feat(emojis): allow copy pasting of inlined svgs as emojis;

--- a/pages/templates/template.html
+++ b/pages/templates/template.html
@@ -13,7 +13,7 @@
   <!-- Highlight JS -->
   <link rel="stylesheet" href="/highlight_js/rose-pine.css" />
   <script src="/highlight_js/main.js"></script>
-  <!-- load additional languages -->
+  <!-- Load Additional Languages -->
   <script src="/highlight_js/langs/rust.js"></script>
   <script>hljs.highlightAll();</script>
 </head>
@@ -55,6 +55,8 @@
   
   <!-- Normal JS -->
   <script src="/templates/template.js"></script>
+  <!-- Allow Copy + Paste with Inlined SVG Emojis -->
+  <script src="/templates/emoji_copy_paste.js"></script>
 </body>
 
 </html>
