feat(css): add brackets around links because it looks cool...;

--- a/pages/templates/template.css
+++ b/pages/templates/template.css
@@ -145,6 +145,16 @@ a {
   transition: color 0.3s ease;
 }
 
+a::before {
+  content: '[';
+  color: var(--muted);
+}
+
+a::after {
+  content: ']';
+  color: var(--muted);
+}
+
 a:hover {
   color: var(--foam);
 }
