--- a/pages/templates/template.html
+++ b/pages/templates/template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{title}}</title>
+  {{head}}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/favicon.svg">
