feat(pages): add guide to parsing inital stack in place of miros/c1;

--- a/pages/templates/template.html
+++ b/pages/templates/template.html
@@ -57,6 +57,7 @@
   <script src="/highlight_js/main.js"></script>
   <!-- Load Additional Languages -->
   <script src="/highlight_js/langs/rust.js"></script>
+  <script src="/highlight_js/langs/x86asm.js"></script>
   <script>hljs.highlightAll();</script>
 </body>
 
