--- a/pages/templates/template.css
+++ b/pages/templates/template.css
@@ -83,6 +83,7 @@ h5 {
 
 /* Code: */
 code {
+  font-family: 'Cascadia Code', monospace;
   color: var(--gold);
   background: var(--base-dark);
   padding-inline: 0.6rem;
@@ -119,6 +120,10 @@ th,
 td {
   padding: 0;
   border-spacing: 0;
+}
+
+th {
+  padding-inline: 1rem;
 }
 
 table {
