feat(langs): add support for Kconfig lang;
WARN: This support is probably not great, but it works for now...;

--- a/pages/templates/template.html
+++ b/pages/templates/template.html
@@ -58,6 +58,7 @@
   <!-- Load Additional Languages -->
   <script src="/highlight_js/langs/rust.js"></script>
   <script src="/highlight_js/langs/x86asm.js"></script>
+  <script src="/highlight_js/langs/kconfig.js"></script>
   <script>hljs.highlightAll();</script>
 </body>
 
